--- a/smtd/src/App.css
+++ b/smtd/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #f16a70;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
