--- a/smtd/src/styles/navbarStyle.scss
+++ b/smtd/src/styles/navbarStyle.scss
@@ -5,6 +5,10 @@ nav {
   width: 100%;
   color: #f4f4f4;
   font-family: "Montserrat", sans-serif;
+  .button-wrapper {
+    display: flex;
+    flex-direction: row;
+  }
 
   button {
     width: auto;
