Add minor styling, make Lists child of TaskFrame for ease of styling. Add search bar with /api/query endpoint

--- a/smtd/src/styles/loginStyle.scss
+++ b/smtd/src/styles/loginStyle.scss
@@ -7,6 +7,7 @@
   width: fit-content;
   padding: 1rem;
   position: absolute;
+  top: 10vh;
   right: 1vw;
   background-color: #f16a70;
   box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.55);
